# xstr

./: .gitattributes  .gitignore  .travis.yml  .travis_before_install.sh  Makefile.am  Makefile.in  README.md  aclocal.m4  build.sh  config.in  configure  configure.ac  example.c  package.json  thing.tgz  xstr.pc.in
.github/ISSUE_TEMPLATE/: bug_report.md
include/: str.h
src/: Makefile.am  Makefile.in  config.in  example.c  str.c  str.h
